# arby

./: .env  .env.example  .env.okx  .env.testnet  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  HyperArbitrage_A100_GPU.ipynb  README.md  RiskManager.java  TESTNET_GUIDE.md  arbitrage_bot_a100.ipynb  bot.py  build.sh  build_production.sh  check_testnet_setup.py  cleanup_repo.sh  comprehensive_arbitrage.py  debug.py  deploy_fixed.py  deploy_production.py  deploy_testnet.js  docker-compose.yml  final_bot.py  fix_orchestrator.py  fix_profit_math.py  flash_loan_arbitrage.py  full_system.py  generate_colab_notebook.py  generate_eth_wallet.py  generate_wallet.py  hardhat.config.js  hardhat.config.testnet.js  hey.py  hft_engine.js  launch_ultra.sh  main.ipynb  main_orchestrator.py  market_data_aggregator.go  (+48 more)
.cargo/: config.toml
benches/: pathfinding.rs
config/: chains.json  exchanges.json  settings.py  tokens.json
contracts/: FlashLoanArbittrage.sol  TestnetFlashLoan.sol
cpp_cuda/: CMakeLists.txt
cpp_engine/: execution_engine.cpp  gpu_kernels.cu  gpu_kernels.cuh
crypto-trading-bot/contracts/: CrossDexArbitrage.sol  FlashLoanArbitrage.sol  LiquidationBot.sol
crypto-trading-bot/contracts/interfaces/: IAave.sol  IBalancer.sol  IFlashLoanReceiver.sol  IUniswapV3.sol
crypto-trading-bot/contracts/libraries/: SafeMath.sol  TransferHelper.sol
crypto-trading-bot/src/connectors/blockchain/: BSCConnector.js  EthereumConnector.js  PolygonConnector.js  SolanaConnector.js
crypto-trading-bot/src/connectors/dex/: Balancer.js  Curve.js  SushiSwap.js  UniswapV3.js
crypto-trading-bot/src/connectors/exchanges/: BaseExchange.js  Binance.js  Coinbase.js  FTX.js  Kraken.js
crypto-trading-bot/src/core/: bot.js  engine.js  executor.js  manager.js
crypto-trading-bot/src/ml/models/: ArbitrageDetection.py  PricePrediction.py
crypto-trading-bot/src/ml/reinforcement/: Environment.py  TradingAgent.py
crypto-trading-bot/src/ml/training/: ModelTrainer.py
crypto-trading-bot/src/services/: FlashbotService.js  GasService.js  MempoolService.js  MonitoringService.js  NotificationService.js  OracleService.js  PriceService.js
crypto-trading-bot/src/strategies/arbitrage/: CrossChainArbitrage.js  CrossExchangeArbitrage.js  FlashLoanArbitrage.js  StablecoinArbitrage.js  TriangularArbitrage.js
crypto-trading-bot/src/strategies/base/: BaseStrategy.js
crypto-trading-bot/src/strategies/liquidation/: AaveLiquidator.js  CompoundLiquidator.js  MorphoLiquidator.js
crypto-trading-bot/src/strategies/mev/: ArbitrageBundle.js  BackrunStrategy.js
flashloans-lab/: .env.example  requirements.txt  test_rust.py
flashloans-lab/configs/: chains.yaml  risk.yaml  strategies.yaml
flashloans-lab/docker/: docker-compose.yml
flashloans-lab/docs/: README.md
flashloans-lab/engine/: __init__.py  cli.py  config.py
flashloans-lab/engine/datasources/: cex_ws.py  dex_index.py  evm_rpc.py  gas_tracker.py
flashloans-lab/engine/execsim/: portfolio.py  simulator.py
flashloans-lab/engine/optimize/: bandit.py
flashloans-lab/engine/pricing/: amm_math.py  route_search.py
flashloans-lab/engine/strategies/: base.py  family_cex_dex.py  family_cross_dex.py  family_dex_arb.py  family_flash_loan.py  family_liquidity.py  family_oracle.py  registry.py
flashloans-lab/engine/strategies/families/: family_a_dex_arb.py
flashloans-lab/rust-core/: Cargo.toml  pyproject.toml
flashloans-lab/rust-core/src/: lib.rs  route.rs  univ2.rs  univ3.rs
flashloans-lab/scripts/: init_repo.sh
flashloans-lab/webui/: package.json
keys/: .gitkeep
monitoring/: dashboard.py
python_orchestrator/: main_controller.rs
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: deploy_contracts.py
solana_bridge/programs/cross_chain_arbitrage/src/: lib.rs
src/: core.rs  engine.rs  gpu_accelerator.cpp  gpu_kernel.cu  lib.rs  main.py  orchestrator_m1.py  orchestrator_m1.py.backup  orchestrator_m1_fixed.py  orchestrator_unified.py
src/blockchain/: gas_optimizer.py  web3_manager.py
src/core/: arbitrage_engine.rs  bot_manager.py  engine.rs  flash_loan.sol  gpu_compute.cu  lib.rs  opportunity_scanner.py  risk_manager.py
src/cpp/: mempool.cpp  mempool_monitor.cpp  orderbook.cpp  orderbook_scanner.cpp  simple.cpp
src/cuda/: parallel_pathfinder.cu
src/exchanges/: base_exchange.py  binance_client.py  okx_client.py
src/gpu/: price_calculator.cpp
src/metal/: gpu_kernel.metal
src/python/: cross_chain_engine.py  mev_hunter.py  ml_predictor.py  orchestrator.py  orchestrator_full.py  simple_bot.py  ultra_orchestrator.py  web3_interface.py
src/rust/: lib.rs
src/solidity/: FlashLoanReceiver.sol  MEVExecutor.sol  MultiDexArbitrage.sol
src/strategies/: base_strategy.py  flash_loan_arbitrage.py
src/utils/: logger.py  notifications.py
strategies/: strategy_orchestrator.py
strategies/cross-chain/: bridge_arbitrage.py
strategies/cross-exchange/: cex_arbitrage.py
strategies/dex/: uniswap_v3_strategy.py
strategies/flash/: aave_flash.py  balancer_flash.py
strategies/mev/: sandwich_attack.py
strategies/statistical/: mean_reversion.py
