[package]
name = "hyperarbitrage"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
rayon = "1.8"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1.16"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
bincode = "1.3"
lz4_flex = "0.11"
ahash = "0.8"
smallvec = "1.11"
arrayvec = "0.7"
web3 = "0.19"
ethers = "2.0"
solana-client = "1.17"
solana-sdk = "1.17"
jupiter-swap-api-client = "0.1"

[lib]
name = "hyperarbitrage"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
