[package]
name = "flashloans-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
num-bigint = "0.4"
num-traits = "0.2"
pyo3 = { version = "0.20", features = ["extension-module"] }

[lib]
name = "flashloans_core"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
