[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flashloans-core"
version = "0.1.0"
description = "High-performance AMM math for flash loan arbitrage"
requires-python = ">=3.7"
authors = [
    {name = "Flash Loan Lab"},
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flashloans_core"
